# AgentAudit

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
agentaudit/: __init__.py  cli.py  config.py  exceptions.py  models.py  reporting.py  runner.py  scoring.py
agentaudit/adapters/: __init__.py  base.py  command.py  http.py  mock.py
agentaudit/rag/: __init__.py  evaluator.py
agentaudit/safety/: __init__.py  detectors.py  packs.py
agentaudit/templates/: report.html.j2
docs/: adapters.md  github-actions.md  quickstart.md  rag-evaluation.md  roadmap.md  safety-tests.md  writing-tests.md
examples/basic/: agentaudit.yml  mock_app.py
examples/customer_support/: README.md  customer_support.yml
examples/rag/: rag_eval.yml
examples/rag/docs/: refund_policy.md  shipping_policy.md
examples/safety/: prompt_injection.yml
tests/: test_cli.py  test_http_adapter.py  test_models.py  test_rag_evaluator.py  test_runner.py  test_safety.py  test_scoring.py
